[Remove] testing comment

--- a/CRNN/CRNN.ipynb
+++ b/CRNN/CRNN.ipynb
@@ -597,16 +597,16 @@
     "    valid_output = np.zeros([VALID_SIZE])\n",
     "    \n",
     "    # FIT\n",
-    "    # hist = train(model, X_train, X_valid, y_train, y_valid, train_input_len, y_train_len, train_output, valid_input_len, y_valid_len, valid_output, opt, pred)\n",
+    "    hist = train(model, X_train, X_valid, y_train, y_valid, train_input_len, y_train_len, train_output, valid_input_len, y_valid_len, valid_output, opt, pred)\n",
     "    \n",
     "    # ==========================================================\n",
     "    # VALIDATION\n",
-    "    # valid_preds = validation(hist, X_valid, VALID_SIZE)\n",
-    "    # valid_acc = validation_accuracy_metrics(df_valid, valid_preds, VALID_SIZE, 'IDENTITY')\n",
-    "    # print('correct chars predicted : %f' %(valid_acc))\n",
+    "    valid_preds = validation(hist, X_valid, VALID_SIZE)\n",
+    "    valid_acc = validation_accuracy_metrics(df_valid, valid_preds, VALID_SIZE, 'IDENTITY')\n",
+    "    print('correct chars predicted : %f' %(valid_acc))\n",
     "    \n",
     "    # TESTING\n",
-    "    # testing(hist, test_dir, df_test, X_test, 10)\n",
+    "    testing(hist, test_dir, df_test, X_test, 10)\n",
     "    # test_acc = CRNN.validation_accuracy_metrics(df_valid, valid_preds, conf.VALID_SIZE, 'IDENTITY')\n",
     "    # print('correct chars predicted : %f' %(valid_acc))\n"
    ]
